infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daengglejeju-web
spec:
  selector:
    app: daengglejeju-web
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
