infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daengglejeju-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - daengglejeju.cloud
        - www.daengglejeju.cloud
      secretName: daengglejeju-tls
  rules:
    - host: daengglejeju.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: daengglejeju-web
                port:
                  number: 80
    - host: www.daengglejeju.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: daengglejeju-web
                port:
                  number: 80
